responsive Tablet and Desktop, must fix IconFeatures, Circle Header and Icons wrap

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@
 /* mediaquery */
 @layer base {
     body{
-        font-family: 'Archivo', sans-serif;
+        font-family: 'Archivo';
     }
 }
